--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <!-- Manifest -->
     <link rel="manifest" href="/manifest.webmanifest">
-    <meta name="theme-color" content="#8b5cf6">
+    <meta name="theme-color" content="#40E0D0">
     
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
